--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="mid">
       <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you</p>
-        <img src="https://codecademy6970054-29400.ccterminalcloud.com/resources/images/camp.jpg" alt="">
+        <img src="./resources/camp.jpg" alt="">
     </div>
     <div class="footer">
-      <img src="https://codecademy6970054-29400.ccterminalcloud.com/resources/images/phone.png" alt="">
+      <img src="./resources/phone.png" alt="">
       <h2>Coming soon for iPhone and Android</h2>
         <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
           <p class="copyright">© Excursion</p>
